# FYDP_HARP

./: .gitignore  README.md  harp_setup.sh  requirements.txt  ros_setup.sh
src/face_animations/: package.xml  setup.cfg  setup.py
src/face_animations/face_animations/: index.html  index.js  main.py  style.css
src/launch_harp/: CMakeLists.txt  package.xml
src/launch_harp/launch/: launch_harp.py
src/mqtt/: package.xml  setup.py
src/mqtt/mqtt/: mqtt_node.py
src/mqtt_module/: package.xml  setup.cfg  setup.py
src/mqtt_module/mqtt_module/: main.py
src/neck_module/: package.xml  setup.cfg  setup.py
src/neck_module/neck_module/: main.py  utils.py
src/speech_module/: package.xml  setup.cfg  setup.py
src/speech_module/speech_module/: main.py  test.py
src/teleops/: package.xml  setup.py
src/teleops/teleops/: teleops_node.py
src/teleops_module/: package.xml  setup.cfg  setup.py
src/teleops_module/teleops_module/: main.py  utils.py
src/vision_module/: package.xml  setup.py
src/vision_module/resource/: kinetics600_label_map.txt
src/vision_module/vision_module/: behavior_classifier.py  behavior_utils.py  main.py  utils.py
