<package format="3">
  <name>mqtt_module</name>
  <version>0.0.0</version>
  <description>MQTT communication package for ROS 2</description>
  <maintainer email="abdullah_boobak@hotmail.com">mak</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>paho-mqtt</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>