<package format="3">
  <name>teleops_module</name>
  <version>0.0.0</version>
  <description>Teleops module for controlling the robot</description>
  <maintainer email="abdullah_boobak@hotmail.com">mak</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>pyserial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>